# ModiFinder_base

./: .buildinfo  .gitignore  README.md  Readme.md  conda-env.yml  genindex.html  getting_started.html  index.html  install.html  main.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  tutorial.html
.github/workflows/: documentation.yml  pypi_publish.yml
_modules/: index.html
_modules/modifinder/: convert.html
_sources/modifinder/: index.rst.txt
_sources/tutorials/: basics.rst.txt  customization.rst.txt
_static/: documentation_options.js
docs/: Makefile  requirements.txt
docs/source/: conf.py  getting_started.md  getting_started.rst  index.rst  tutorial.rst
modifinder/: __init__.py  convert.html  convert.py  drawing.html  exceptions.py  index.html  runner.py
modifinder/classes/: Compound.py  EdgeDetail.py  ModiFinder.py  Spectrum.py  StructureMeta.py  __init__.py  classes.Compound.html  classes.EdgeDetail.html  classes.ModiFinder.html  classes.Spectrum.html  classes.StructureMeta.html  index.html
modifinder/engines/: Abtracts.py  __init__.py  engines.Abtracts.html  index.html
modifinder/samples/: caffeine.py  theophylline.py
modifinder/tests/: test_convert.py  utils.py
modifinder/utilities/: __init__.py  general_utils.py  gnps_types.py  index.html  mol_utils.py  network.py  spectrum_utils.py  utilities.general_utils.html  utilities.gnps_types.html  utilities.mol_utils.html  utilities.network.html  utilities.spectrum_utils.html  visualizer.py
tests/: test_pair_mgf_flow.py  test_real_cases.py  test_usi_cases.py
tests/test_files/: pair.mgf  usi_test_spectra.json
tests/test_utilities/: test_general_utils.py  test_gnps_types.py
tutorials/: basics.html  customization.html  utilities.html  visualization.html
(+77 files in other folders)
