[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "modifinder"
version = "1.4-beta"
authors = [
    { name = "Reza Shahneh", email = "mzare008@ucr.edu" },
]
description = "ModiFinder package"
dependencies = [
    "cairosvg",
    "rdkit",
    "requests",
    "xlsxwriter",
    "prettytable",
    "dash",
    "numpy",
    "tqdm",
    "IPython",
    "furl",
    "pandas",
    "dash-bootstrap-components",
    "pillow",
    "openpyxl",
    "openpyxl-image-loader",
    "msbuddy==0.2.3",
    "seaborn",
    "pyteomics",
    "matplotlib",
    "networkx",
]
requires-python = ">=3.9"
readme = "Readme.md"
license = {file = "LICENSE.md"}

[project.optional-dependencies]
extras = []  # Define optional dependencies here if needed

[project.urls]
Documentation = "https://wang-bioinformatics-lab.github.io/ModiFinder_base/"
Repository = "https://github.com/Wang-Bioinformatics-Lab/ModiFinder_base"